--- a/app/assets/stylesheets/stores/index.scss
+++ b/app/assets/stylesheets/stores/index.scss
@@ -1,6 +1,6 @@
 .top-main {
   height: 600px;
-  background-image: image-url('toppage/toppage.jpg');
+  background-image: image-url('toppage/top-page.jpg');
   .top-message {
     color: white;
     text-align: center;
